[project]
name = "embedder"
version = "0.1.0"
description = "Blux Search: NumPy-based vector search engine with Flat + IVF indexing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26.0",
  "sentence-transformers>=2.7.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
